@@ -8,13 +8,11 @@
     <artifactId>TrainspottingJFX</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!--    Compiler Versions-->
     <properties>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
     </properties>
 
-    <!--    DEPENDENCIES-->
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -52,6 +50,12 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.15</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -60,13 +64,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.5</version>
                 <configuration>
-                    <mainClass>project.map.Map</mainClass>
+                    <mainClass>project.map.StartApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
